# metapat

./: AGENTS.md  AXIOMS.md  COMPLIANCE.md  GLOSSARY.md  README.md  ROADMAP.md  THEORIES.md  UCNS_IMPLEMENTATION.md  llms.txt  metapat_msdmd.ts  phi-test-diagnostic.txt  pyproject.toml
.agents/skills/: README.md
.agents/skills/cap-build/: SKILL.md
.agents/skills/deps-build/: SKILL.md
.agents/skills/meta-module-build/: SKILL.md
.agents/skills/risk-boundary-build/: SKILL.md
.agents/skills/test-build/: SKILL.md
.github/workflows/: ci.yml  materialize-catalog.yml  materialize-electromagnetic-pipe.yml  materialize-quantum-application.yml  phi-diagnostics.yml  reconcile-application-docs.yml  reconcile-envelope-catalog.yml  regenerate-msdmd.yml
codex/: skill-lib-handoff.md
codex-handoff/2026-07-12-stack-repair/: COMPLETED_LOOKS_LIKE.md  REQUIRED_CHANGES.md
docs/: application-modules.md  claims-ledger.md  electromagnetic-pipe-application.md  semantic-module-catalog.md  ucns-phi-policy.md
docs/applications/: quantum-magnetism.md  three-phase-electromagnetic-pipe.md
docs/releases/: metapat-0.6.0.md
examples/: registration.md
handoffs/: ucns-profile-consumer-status.json
src/metapat/: __init__.py  application.py  canon.py  catalog.py  catalog_build.py  catalog_data.py  catalog_doctrine_data.py  catalog_theory_data.py  electromagnetic_pipe.py  envelope.py  flow_plan.py  quantum_magnetism.py  relations.py  ucns.py  ucns_phi.py  ucns_profile_protocol.py  validation.py
src/metapat/fixtures/: quantum-magnetism-application-v1.json  root-spine-envelope-v1.json  semantic-module-catalog-v1.json  three-phase-electromagnetic-pipe-v1.json
tests/: test_000_release_materialization.py  test_application.py  test_canon_integrity.py  test_catalog.py  test_contract_audit.py  test_contracts.py  test_electromagnetic_pipe.py  test_envelope.py  test_msdmd_generation.py  test_packaging.py  test_quantum_magnetism.py  test_relations.py  test_ucns_bridge.py  test_ucns_phi.py  theorem-01-boundary-earns-its-keep.md  theorem-05-consciousness-is-optional.md
tools/: __init__.py  check_contract_graph.py  generate_application_fixtures.py  generate_catalog.py  generate_msdmd.py
